<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_text"
        android:text="@string/forgot_password_not_link"
        android:textColor="#f6d9d4"
        android:textStyle="bold"
        android:textSize="50dp"
        android:fontFamily="@font/humble_hearts"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:text="@string/forgot_password_email"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:background="@drawable/shape_edit_text"
        android:inputType="textEmailAddress"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:paddingLeft="10dp"
        android:hint="@string/email" />
    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:layout_below="@id/email"
        android:layout_marginLeft="90dp"
        />
    <TextView
        android:id="@+id/login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_here"
        android:layout_below="@id/email"
        android:layout_marginLeft="255dp"
        android:textColor="#f6d9d4"
        />
</RelativeLayout>