<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#f6d9d4"
        android:layout_marginTop="-80dp"
        android:textStyle="bold"
        android:textSize="60dp"
        android:fontFamily="@font/humble_hearts"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_edit_text"
        android:layout_below="@+id/sign_up_text"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
        android:paddingLeft="10dp"
        android:hint="@string/firstname" />
    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_edit_text"
        android:layout_below="@+id/firstname"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_baseline_perm_contact_calendar_24"
        android:paddingLeft="10dp"
        android:hint="@string/lastname" />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_edit_text"
        android:layout_below="@+id/lastname"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:paddingLeft="10dp"
        android:hint="@string/username" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/username"
        android:background="@drawable/shape_edit_text"
        android:inputType="textEmailAddress"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:paddingLeft="10dp"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/email"
        android:background="@drawable/shape_edit_text"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:hint="@string/password" />
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:background="@drawable/shape_edit_text"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:hint="@string/confirm_password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/sign_up"
        android:hint="@string/sign_up"
        android:background="@drawable/button"
        />
    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:layout_below="@id/sign_up"
        android:layout_marginLeft="90dp"
        />
    <TextView
        android:id="@+id/login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_here"
        android:layout_below="@id/sign_up"
        android:layout_marginLeft="255dp"
        android:textColor="#f6d9d4"
        />

</RelativeLayout>