<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/logo"
        android:textColor="#f6d9d4"
        android:layout_marginTop="-80dp"
        android:textStyle="bold"
        android:textSize="60dp"
        android:fontFamily="@font/humble_hearts"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/login_text"
        android:background="@drawable/shape_edit_text"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:paddingLeft="10dp"
        android:hint="@string/username" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/username"
        android:background="@drawable/shape_edit_text"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:hint="@string/password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/login"
        android:hint="@string/login"
        android:background="@drawable/button"
        />
    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:text="@string/create_account"
        android:layout_marginLeft="90dp"
        />
    <TextView
        android:id="@+id/create_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:text="@string/create_here"
        android:layout_marginLeft="235dp"
        android:textColor="#f6d9d4"
        />
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_here"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:textColor="#f6d9d4"
        />
</RelativeLayout>